@@ -8,7 +8,7 @@
 			<left>-20</left>
 			<right>0</right>
 			<top>85</top>
-			<animation effect="slide" end=",-10" time="0" condition="Container.Content(images) | Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows)  | Container.Content(seasons)">Conditional</animation>
+			<animation effect="slide" end=",-10" time="0" condition="Container.Content(images) | Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(seasons)">Conditional</animation>
 			<control type="panel" id="506">
 				<width>100%</width>
 				<height>950</height>
@@ -21,6 +21,7 @@
 				<pagecontrol>5199</pagecontrol>
 				<orientation>horizontal</orientation>
 				<scrolltime tween="cubic" easing="out">500</scrolltime>
+				<visible>Container.Content(images) | Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(seasons) | Container.Content(artists) | Container.Content(albums) | Container.Content(musicvideos) | Container.Content(addons)</visible>
 				<itemlayout height="180" width="280" condition="Container.Content(images)">
 					<control type="image">
 						<left>10</left>
@@ -140,7 +141,7 @@
 						</control>
 					</control>
 				</focusedlayout>
-				<itemlayout height="300" width="210" condition="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows)  | Container.Content(seasons)">
+				<itemlayout height="300" width="210" condition="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(seasons)">
 					<control type="image">
 						<left>10</left>
 						<top>10</top>
@@ -167,7 +168,7 @@
 						<texture>$VAR[WallWatchedIconVar]</texture>
 					</control>
 				</itemlayout>
-				<focusedlayout height="300" width="210" condition="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows)  | Container.Content(seasons)">
+				<focusedlayout height="300" width="210" condition="Container.Content(movies) | Container.Content(sets) | Container.Content(tvshows) | Container.Content(seasons)">
 					<control type="image">
 						<left>20</left>
 						<top>20</top>
