@@ -1,3 +1,6 @@
+[B]2.1.7[/B]
+• Minor fixes
+
 [B]2.1.6[/B]
 • Add new 'Gallery' view
 • Add new 'Mosaic' view
